add remaining stream and filter operations